--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<script src="string.min.js"></script>
 	<script src="underscore-min.js"></script>
 	<script type="text/javascript">
-		var urlTemplate = 'http://www.gumtree.com/search?current-distance={{distance}}&seller_type={{sellerType}}&min_beds={{minBeds}}&max_beds={{maxBeds}}&min_price={{minPrice}}&max_price={{maxPrice}}&q={{query}}&search_location={{searchLocation}}&category=flats-and-houses-for-rent&search_scope={{searchScope}}';
+		var urlTemplate = 'http://www.gumtree.com/search?current-distance={{distance}}&seller_type={{sellerType}}&min_property_number_beds={{minBeds}}&max_beds={{maxBeds}}&min_price={{minPrice}}&max_price={{maxPrice}}&q={{query}}&search_location={{searchLocation}}&category=flats-and-houses-for-rent&search_scope={{searchScope}}';
 		var resultsVisible = false;
 
 		function generateUrlFromForm () {
